syntax = "proto3";

package tw.seamlik.tansa.v1;

message Response {
  uint32 service_port = 1;
}
